tweak appearance: reduce contrast a little, make sure ox shadows of overlay items are always darker, even in dark mode

--- a/src/fontra/client/css/core.css
+++ b/src/fontra/client/css/core.css
@@ -18,9 +18,9 @@
 
 :root {
   --foreground-color-light: black;
-  --background-color-light: white;
+  --background-color-light: #F6F6F6;
   --foreground-color-dark: white;
-  --background-color-dark: black;
+  --background-color-dark: #333;
 
   --foreground-color: var(--foreground-color-light);
   --background-color: var(--background-color-light);
